Test notebook selection/skipping

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,8 @@ before_script:
 
 test:
   script:
-      - source ./devtools/prepare.sh
+      - NOTEBOOKS=`python devtools/select_notebooks.py --skip-file devtools/skip`
+      - echo $NOTEBOOKS
+      - source ./devtools/prepare.sh $NOTEBOOKS
       - echo "hypothetical test"
       #- for ipynb in *ipynb; do; ipynbtest.py $ipynb; done
