--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,9 @@
 image: continuumio/miniconda:latest
 
 before_script:
+  - conda install -y -c omnia openpathsampling
   - conda update -y --all
-  - conda install -c omnia openpathsampling
-  - conda uninstall openpathsampling
+  - conda uninstall -y openpathsampling
   - git clone https://github.com/openpathsampling/openpathsampling.git
   - cd openpathsampling && pip install -e . && cd ..
   - conda install -c omnia ipynbtest
@@ -13,4 +13,4 @@ test:
       - NOTEBOOKS=`python devtools/select_notebooks.py --skip-file devtools/skip`
       - echo $NOTEBOOKS
       - source ./devtools/prepare.sh $NOTEBOOKS
-      - for ipynb in $NOTEBOOKS; do ipynbtest.py $ipynb; done
+      - for ipynb in $NOTEBOOKS; do ipynbtest.py ${ipynb}.ipynb; done
