--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 image: continuumio/miniconda:latest
 
 before_script:
+  - export PYTHONUNBUFFERED=true
   - bash ./devtools/conda_ops_dev_install.sh
   # curl and unzip are used to download figshare files
   - conda install -y curl
