add CONTRIBUTING; test transition_analysis_Abl

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,4 +13,6 @@ test:
   script:
     - export MPLBACKEND=PS
     - NOTEBOOKS=`python devtools/select_notebooks.py --skip-file devtools/skip`
+    # if you only want to test one notebook
+    # - NOTEBOOKS="my_notebook_name"  # without the .ipynb extension!
     - source ./devtools/run_tests.sh $NOTEBOOKS
