--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,10 @@ before_script:
   - export PYTHONUNBUFFERED=true
   - bash ./devtools/conda_ops_dev_install.sh
   # curl and unzip are used to download figshare files
-  - conda install -y curl
-  - conda install -y -c conda-forge unzip
-  - conda update -y --all
-  - conda install -y -c omnia ipynbtest
+  - conda install -y --quiet curl
+  - conda install -y --quiet -c conda-forge unzip
+  - conda update -y --quiet --all
+  - conda install -y --quiet -c omnia ipynbtest
 
 test:
   script:
