See if pinning IPython 5.4.1 fixes problems
See if IPy 5.5 works (5.4 does; 5.6 doesn't)

double check that error is in 5.6

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ before_script:
   - conda install -y --quiet -c conda-forge unzip
   - conda update -y --quiet --all
   - conda install -y --quiet -c omnia ipynbtest
+  - conda install -y --quiet ipython==5.6
 
 test:
   script:
