try switching to conda-forge?
Having trouble reproducing the problems locally; is this why?

channels, not channel

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: continuumio/miniconda:latest
 
 before_script:
   - export PYTHONUNBUFFERED=true
+  - conda config --add channels conda-forge
   - bash ./devtools/conda_ops_dev_install.sh
   # curl and unzip are used to download figshare files
   - conda install -y --quiet curl
