--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,14 +10,12 @@ before_script:
   - conda install -y --quiet -c conda-forge unzip
   - conda update -y --quiet --all
   - conda install -y --quiet -c omnia ipynbtest
-  - conda install -y --quiet ipython==5.6
   - conda list
 
 test:
   script:
-    - export MPLBACKEND=PS
+    #- export MPLBACKEND=PS
     - NOTEBOOKS=`python devtools/select_notebooks.py --skip-file devtools/skip`
     # if you only want to test one notebook
     # - NOTEBOOKS="my_notebook_name"  # without the .ipynb extension!
-    - NOTEBOOKS="minimal"
     - source ./devtools/run_tests.sh $NOTEBOOKS
