--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ before_script:
   - export PYTHONUNBUFFERED=true
   - conda update -y --quiet -n base conda
   #- conda config --add channels conda-forge
-  - bash ./devtools/conda_ops_dev_install.sh
+  - bash ./devtools/conda_ops_dev_install.sh dwhswenson travis
   # curl and unzip are used to download figshare files
   - conda install -y --quiet curl
   - conda install -y --quiet -c conda-forge unzip
