--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,13 +3,11 @@ image: continuumio/miniconda:latest
 before_script:
   - export PYTHONUNBUFFERED=true
   - conda update -y --quiet -n base conda
+  # curl and unzip are used to download figshare files
+  - conda install -y -q -c conda-forge pyyaml future curl unzip
   #- conda config --add channels conda-forge
   - bash ./devtools/conda_ops_dev_install.sh dwhswenson travis
-  # curl and unzip are used to download figshare files
-  - conda install -y --quiet curl
-  - conda install -y --quiet -c conda-forge unzip
-  - conda install -y --quiet -c omnia ipynbtest
-  - conda update -y --quiet --all
+  - conda install -y -q -c omnia ipynbtest
   - conda list
 
 test:
