--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ before_script:
   - export PYTHONUNBUFFERED=true
   - conda update -y --quiet -n base conda
   # curl and unzip are used to download figshare files
-  - conda install -y -q -c conda-forge pyyaml future curl unzip
+  - conda install -y -q -c conda-forge curl unzip
   #- conda config --add channels conda-forge
   - bash ./devtools/conda_ops_dev_install.sh dwhswenson travis
   - conda install -y -q -c omnia ipynbtest
