--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,8 @@ before_script:
   # curl and unzip are used to download figshare files
   - conda install -y -q -c conda-forge curl unzip
   #- conda config --add channels conda-forge
-  - bash ./devtools/conda_ops_dev_install.sh dwhswenson travis
+  - $ curl -OLk https://raw.githubusercontent.com/openpathsampling/openpathsampling/master/devtools/conda_ops_dev_install.sh
+  - bash ./conda_ops_dev_install.sh
   - conda install -y -q -c omnia ipynbtest
   - conda list
 
