add matplotlib to the correct CI file...

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ before_script:
   - conda update -y --quiet -n base conda
   # curl and unzip are used to download figshare files
   - conda install -y -q -c conda-forge curl unzip
+  - conda install -y -q matplotlib
   #- conda config --add channels conda-forge
   - curl -OLk https://raw.githubusercontent.com/openpathsampling/openpathsampling/master/devtools/conda_ops_dev_install.sh
   - bash ./conda_ops_dev_install.sh
