--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,14 +26,13 @@ jobs:
       - uses: actions/setup-python@v2
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          auto-update-python: true
           python-version: ${{ matrix.CONDA_PY }}
           miniforge-variant: Mambaforge
       - name: "Install"
         run: |
-          conda install -y -q -c conda-forge curl unzip matplotlib pytest nbval
           curl -OLk https://raw.githubusercontent.com/openpathsampling/openpathsampling/master/devtools/conda_ops_dev_install.sh
           source ./conda_ops_dev_install.sh
+          mamba install -y -q -c conda-forge curl unzip matplotlib pytest nbval
       - name: "Versions"
         run: conda list
       - name: "Tests"
